buen avance en logica, diseño funcional

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,8 @@
 
 // components
 @import "./components/auth";
-@import "./components/journal";
-@import "./components/nothing";
-@import "./components/notes";
 @import './components/loading';
+@import './components/products';
+@import './components/header';
+@import './components/home';
+@import './components/formProduct'
