--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -43,6 +43,7 @@
 }
 
 .auth__title {
+  text-align: center;
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
@@ -92,7 +93,7 @@
   color: #000000;
   font-size: 1rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   cursor: pointer;
   transition: background-color 0.1s ease-in-out;
 
