por implementar la eliminacion

--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -106,6 +106,19 @@
   td {
     padding: 0.5rem;
     font-size: 1rem;
+  }
+
+  tbody tr {
+    cursor: pointer;
     background-color: var(--tertiary);
+
+    &:hover {
+      background-color: var(--quaternary);
+    }
+
+    &:active {
+      transform: translateY(1px);
+      background-color: var(--secondary);
+    }
   }
 }
