--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,8 +3,7 @@
 
 // components
 @import "./components/auth";
-@import './components/loading';
-@import './components/products';
-@import './components/header';
-@import './components/home';
-@import './components/formProduct'
+@import "./components/formProduct";
+@import "./components/header";
+@import "./components/home";
+@import "./components/loading";
